# ebina

./: .gitignore  Cargo.toml  PROJECT.md  README.md
.cargo/: config.toml
adr/: 001-memory-v2.md  002-skill-v2.md
agent/: Cargo.toml
agent/examples/: tool.rs
agent/src/: agent_loop.rs  main.rs  memory.rs  perf.rs  scheduler.rs  skills.rs  syscall.rs  time.rs
cli/: Cargo.toml
cli/src/: embedded.rs  init.rs  local_deps.rs  main.rs  webui.rs
kernel/: Cargo.toml
kernel/src/: abi.rs  autocommit.rs  budget.rs  config.rs  cron.rs  discord.rs  filelock.rs  gateway.rs  grants.rs  lib.rs  logs.rs  main.rs  ratelimit.rs  scheduler_tasks.rs  secrets.rs  state.rs
kernel/src/syscalls/: chat_send.rs  db_exec.rs  embed.rs  exec_wasm.rs  http_fetch.rs  http_get.rs  llm_call.rs  memory_kv.rs  mod.rs  notify.rs  schedule_task.rs  search_web.rs  sleep_until.rs  ssh_exec.rs
kernel/tests/: isolation.rs  network.rs  resource_limits.rs  syscalls.rs
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.vue  api.js  style.css
webui/src/components/: AppsPanel.vue  ChatPanel.vue  ConfigPanel.vue  CorePanel.vue  EgressPanel.vue  FileBrowserPanel.vue  GrantsPanel.vue  LlmLogsPanel.vue  Login.vue  LogsPanel.vue  NotesPanel.vue  ReportsPanel.vue  ScheduleHistoryPanel.vue  SchedulerPanel.vue  SecretsPanel.vue  Sidebar.vue  SkillsPanel.vue  SoulPanel.vue  StatusPanel.vue
