[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
rusqlite = { version = "0.40.1", features = ["bundled", "hooks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
wasmtime = "46.0.1"
wasmtime-wasi = "46.0.1"
